--- a/app/src/free/res/layout/fragment_main.xml
+++ b/app/src/free/res/layout/fragment_main.xml
@@ -20,7 +20,6 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_marginTop="15dp"
-
         android:id="@+id/showJoke"
         android:layout_centerHorizontal="true"
         android:background="@drawable/rounded"
@@ -33,7 +32,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-       android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"/>
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </RelativeLayout>
